made some changes

--- a/style/style.css
+++ b/style/style.css
@@ -35,6 +35,7 @@ body {
 }
 body {
   font-family: 'Lato-Regular', sans-serif;
+  overflow-x: hidden;
 }
 .bodyOverflowHidden {
   overflow: hidden;
@@ -414,7 +415,7 @@ body {
 }
 .experience {
   position: relative;
-  min-height: calc(100vh - 63px);
+  min-height: calc(100vh - 48px);
   padding: 65px 0 90px;
   color: #fff;
   text-align: center;
@@ -627,12 +628,11 @@ body {
   display: -o-flex;
   display: flex;
   flex-flow: row wrap;
-}
-.start .form__group:first-of-type {
-  margin-right: 26px;
+  justify-content: space-between;
 }
 .start .form__group:not(:last-of-type) {
   min-width: calc((100% - 26px) / 2);
+  max-width: 500px;
   margin-bottom: 24px;
 }
 .start .form__group:last-of-type {
@@ -650,6 +650,7 @@ body {
 .start .select2-selection {
   height: 44px;
   border: none;
+  outline: none;
   border-radius: 5px;
 }
 .start .select2-container--default .select2-selection--single .select2-selection__rendered {
@@ -957,7 +958,7 @@ body {
     align-items: center;
   }
   .home {
-    min-height: calc(100vh - 170px);
+    min-height: calc(100vh - 95px);
   }
   .home__text-italic.displayFlexRow {
     justify-content: space-between;
