--- a/style/style.less
+++ b/style/style.less
@@ -88,6 +88,7 @@ body {
 
 body {
 	font-family: @LatoRegular;
+	overflow-x: hidden;
 }
 
 .bodyOverflowHidden {
@@ -536,7 +537,7 @@ body {
 
 .experience {
 	position: relative;
-	min-height: calc(100vh - 63px);
+	min-height: calc(100vh - 48px);
 	padding: 65px 0 90px;
 	color: #fff;
 	text-align: center;
@@ -787,15 +788,17 @@ body {
 		display: -o-flex;
 		display: flex;
 		flex-flow: row wrap;
+		justify-content: space-between;
 	}
 
 	.form__group {
-		&:first-of-type {
-			margin-right: 26px;
-		}
+//		&:first-of-type {
+//			margin-right: 26px;
+//		}
 
 		&:not(:last-of-type) {
 			min-width: calc((100% - 26px) / 2 );
+			max-width: 500px;
 			margin-bottom: 24px;
 		}
 
@@ -820,6 +823,9 @@ body {
 	.select2-selection {
 		height: 44px;
 		border: none;
+//		width: 100%;
+				outline: none;
+
 		.border-radius
 	}
 
@@ -829,7 +835,7 @@ body {
 
 	.select2-selection__rendered,
 	.select2-results__option {
-		color: @mainColor  !important;
+		color: @mainColor!important;
 	}
 
 	.select2-container {
@@ -1226,7 +1232,7 @@ body {
 	}
 
 	.home {
-		min-height: calc(100vh - 170px);
+		min-height: calc(100vh - 95px);
 
 		&__text-italic.displayFlexRow {
 			justify-content: space-between;
