--- a/style/style.css
+++ b/style/style.css
@@ -33,11 +33,11 @@ html,
 body {
   height: 100%;
 }
-body {
+.body {
   font-family: 'Lato-Regular', sans-serif;
   overflow-x: hidden;
 }
-.bodyOverflowHidden {
+.body--overflow-hidden {
   overflow: hidden;
 }
 .container {
@@ -132,7 +132,7 @@ body {
   left: 0;
   right: 0;
   visibility: visible;
-  background: #000;
+  background: linear-gradient(45deg, #517398, #e64382);
 }
 .nav-wrap--active .nav__list {
   display: -webkit-flex;
@@ -145,20 +145,20 @@ body {
 .nav-wrap--active .nav__list-item {
   margin-bottom: 20px;
 }
-.menu-hamburger {
+.hamburger {
   display: none;
   position: relative;
-  align-items: center;
-  align-self: center;
   height: 16px;
   width: 20px;
   cursor: pointer;
   z-index: 9999;
 }
-.menu-hamburger--open {
+.hamburger--open {
   display: flex;
+  align-items: center;
+  align-self: center;
 }
-.menu-hamburger__line {
+.hamburger__line {
   width: 100%;
   height: 2px;
   background: red;
@@ -166,8 +166,8 @@ body {
   visibility: visible;
   transition: all 1s;
 }
-.menu-hamburger::after,
-.menu-hamburger::before {
+.hamburger::after,
+.hamburger::before {
   content: '';
   position: absolute;
   display: block;
@@ -177,24 +177,25 @@ body {
   background: red;
   transition: all 0.5s;
 }
-.menu-hamburger--open .menu-hamburger__line {
-  opacity: 0;
+.hamburger--open .hamburger__line {
   visibility: hidden;
   transition: all 0.5s;
 }
-.menu-hamburger::after {
+.hamburger::after {
   top: 0;
 }
-.menu-hamburger--open::after {
+.hamburger--open::after {
   top: 0;
   transform: scaleX(1.62) translateY(8px) rotate(55deg);
+  background: #fff;
 }
-.menu-hamburger::before {
+.hamburger::before {
   bottom: 0;
 }
-.menu-hamburger--open::before {
+.hamburger--open::before {
   top: 0;
   transform: scaleX(1.62) translateY(8px) rotate(-55deg);
+  background: #fff;
 }
 .nav__list {
   margin: 0;
@@ -953,7 +954,10 @@ body {
   .header .nav {
     margin: 10px 0;
   }
-  .menu-hamburger {
+  .header .nav__link {
+    font-size: 30px;
+  }
+  .hamburger {
     display: flex;
     align-items: center;
   }
