--- a/style/style.less
+++ b/style/style.less
@@ -86,13 +86,13 @@ body {
 	height: 100%;
 }
 
-body {
+.body {
 	font-family: @LatoRegular;
 	overflow-x: hidden;
-}
 
-.bodyOverflowHidden {
-	overflow: hidden;
+	&--overflow-hidden {
+		overflow: hidden;
+	}
 }
 
 .container {
@@ -155,11 +155,13 @@ body {
 	border-bottom: 3px solid @mainColor;
 	transition: all .4s;
 	box-sizing: content-box;
+
 	.container {
 		position: relative;
 		transition: all .8s;
 		height: inherit;
 	}
+
 	&.fixed {
 		position: fixed;
 		padding: 5px 0;
@@ -172,6 +174,7 @@ body {
 	.logo {
 		height: inherit;
 	}
+
 	.logo__img {
 		height: inherit;
 	}
@@ -180,6 +183,7 @@ body {
 .nav-wrap {
 	position: static;
 	align-self: center;
+
 	&--active {
 		position: fixed;
 		z-index: 999;
@@ -190,9 +194,10 @@ body {
 		left: 0;
 		right: 0;
 		visibility: visible;
-		background: #000;
+		background: linear-gradient(45deg, @mainColor, @accentColor);
 
 	}
+
 	&--active .nav__list {
 		display: -webkit-flex;
 		display: -moz-flex;
@@ -201,27 +206,28 @@ body {
 		display: flex;
 		flex-direction: column;
 	}
+
 	&--active .nav__list-item {
 		margin-bottom: 20px;
 	}
 }
 
-.menu-hamburger {
+.hamburger {
 	display: none;
 	position: relative;
-	align-items: center;
-	align-self: center;
 	height: 16px;
 	width: 20px;
 	cursor: pointer;
 	z-index: 9999;
 }
 
-.menu-hamburger--open {
+.hamburger--open {
 	display: flex;
+	align-items: center;
+	align-self: center;
 }
 
-.menu-hamburger__line {
+.hamburger__line {
 	width: 100%;
 	height: 2px;
 	background: red;
@@ -231,8 +237,8 @@ body {
 
 }
 
-.menu-hamburger::after,
-.menu-hamburger::before {
+.hamburger::after,
+.hamburger::before {
 	content: '';
 	position: absolute;
 	display: block;
@@ -243,28 +249,32 @@ body {
 	transition: all .5s;
 }
 
-.menu-hamburger--open .menu-hamburger__line {
-	opacity: 0;
+.hamburger--open .hamburger__line {
 	visibility: hidden;
 	transition: all .5s;
 }
 
-.menu-hamburger::after {
+.hamburger::after {
 	top: 0;
 }
 
-.menu-hamburger--open::after {
+.hamburger--open::after {
 	top: 0;
 	transform: scaleX(1.62) translateY(8px) rotate(55deg);
+	background: #fff;
+
 }
 
-.menu-hamburger::before {
+.hamburger::before {
 	bottom: 0;
+
 }
 
-.menu-hamburger--open::before {
+.hamburger--open::before {
 	top: 0;
 	transform: scaleX(1.62) translateY(8px) rotate(-55deg);
+	background: #fff;
+
 }
 
 .nav__list {
@@ -371,7 +381,7 @@ body {
 		.fontSize(30px, 60px);
 
 		> .home__text-accent {
-							margin: 0.31em 0;
+			margin: 0.31em 0;
 
 			position: relative;
 			padding-left: 0;
@@ -408,14 +418,13 @@ body {
 			justify-content: space-between;
 
 		}
+
 		&-italic .home__text-accent {
-						margin: -0.2em 0;
+			margin: -0.2em 0;
 
 		}
 
 	}
-
-
 
 	&__text-accent {
 		padding: 0.27em 0.84em 0.27em 1em;
@@ -424,8 +433,6 @@ body {
 		background: @semiOpacity;
 
 	}
-
-
 
 	&__link {
 		display: inline-block;
@@ -655,7 +662,6 @@ body {
 		}
 	}
 
-
 	&__item {
 		width: 100%;
 		max-width: 350px;
@@ -792,12 +798,8 @@ body {
 	}
 
 	.form__group {
-//		&:first-of-type {
-//			margin-right: 26px;
-//		}
-
 		&:not(:last-of-type) {
-			min-width: calc((100% - 26px) / 2 );
+			min-width: calc((100% - 26px) / 2);
 			max-width: 500px;
 			margin-bottom: 24px;
 		}
@@ -823,8 +825,7 @@ body {
 	.select2-selection {
 		height: 44px;
 		border: none;
-//		width: 100%;
-				outline: none;
+		outline: none;
 
 		.border-radius
 	}
@@ -835,7 +836,7 @@ body {
 
 	.select2-selection__rendered,
 	.select2-results__option {
-		color: @mainColor!important;
+		color: @mainColor  !important;
 	}
 
 	.select2-container {
@@ -870,13 +871,10 @@ body {
 	.form__search {
 		padding: 8px;
 	}
-
-
 }
 
 .comments {
 	background: #f6f5f1;
-
 
 	&__col-left {
 		width: 100%;
@@ -1124,19 +1122,7 @@ body {
 	}
 }
 
-@media screen and (min-width: 1280px) {
-	.home {
-		//        background-size: cover;
-	}
-}
-
 @media screen and (max-width: 992px) {
-	.displayFlexRow {
-		//        flex-flow: row wrap;
-		//        align-items: center;
-		//        justify-content: center;
-	}
-
 	.header__logo {
 		margin-right: 50px;
 	}
@@ -1153,25 +1139,15 @@ body {
 		justify-content: space-between;
 	}
 
-
-	.home__col-left {
-		//		font-size: 50px;
-	}
-
 	.container {
 		padding: 0 10px;
 	}
-
 
 	.comments {
 
 		&__col-left {
 			max-width: 100%;
-
-
 		}
-
-
 
 		.comments__item {
 			display: block;
@@ -1184,8 +1160,6 @@ body {
 		}
 	}
 
-
-	//
 }
 
 @media screen and (max-width: 768px) {
@@ -1193,7 +1167,7 @@ body {
 
 	.displayFlexRow {
 		flex-flow: row wrap;
-				align-items: center;
+		align-items: center;
 		justify-content: center;
 	}
 
@@ -1214,19 +1188,25 @@ body {
 		.container {
 			justify-content: space-between;
 		}
+
 		.nav {
 			display: none;
 		}
+
 		.nav-wrap--active .nav {
 			display: block;
 		}
+
 		.nav {
 			margin: 10px 0;
+		}
+		.nav__link {
+			font-size: 30px;
 		}
 
 	}
 
-	.menu-hamburger {
+	.hamburger {
 		display: flex;
 		align-items: center;
 	}
